<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:padding="16dp"
    tools:context=".ui.SuaVatNuoiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/untitled1" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addname" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_suckhoe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addsuckhoe" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_typefood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addtypefood" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addtime" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_soluong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addsoluong"
                android:inputType="number"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="Lưu"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="Hủy"
                android:textAllCaps="false" />

        </LinearLayout>
        <Button
            android:id="@+id/btn_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:text="Danh Sách"
            android:textAllCaps="false" />
    </LinearLayout>

</ScrollView>